# sql-client-tauri

./: README.md  llms.txt  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: connection_manager.rs  database_provider.rs  db.rs  lib.rs  main.rs  mysql_provider.rs  postgres_provider.rs  ssh_tunnel.rs  state.rs
src/components/: ActivityBar.svelte  Connection.svelte  DataViewer.svelte  Sidebar.svelte  SqlEditor.svelte  StructureViewer.svelte
src/lib/: db.ts  state.svelte.ts
src/lib/components/ui/table/: table-cell.svelte  table-head.svelte
src/lib/partials/: ActivityBar.svelte  SpaceList.svelte  TitleBar.svelte
src/lib/partials/new/: ConnectionForm.svelte  SavedConnectionList.svelte
src/lib/partials/space/: DataViewer.svelte  SqlEditor.svelte  StructureViewer.svelte  TableList.svelte
src/lib/stores/: connection.state.svelte.ts  state.svelte.ts  table-tab.state.svelte.ts  work-space.state.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.svelte.bak
src/routes/(space)/: +layout.svelte  +layout.ts
src/routes/(space)/[id]/: +page.svelte  +page.ts  DataViewer.svelte  SqlEditor.svelte  StructureViewer.svelte  TableList.svelte
src/routes/(space)/new/: +page.svelte  ConnectionForm.svelte
