[package]
name = "sql-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sql_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-native-tls", "uuid", "ipnetwork"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
ipnetwork = { version = "0.20", features = ["serde"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
ssh2-config = "0.6.2"
dirs = "6.0.0"

